Related: fdo#49271 strip charset suffixes from fontname for substitutions

Change-Id: I9d7b80ebd6d251e2ac6d16899e23584582e8f461